@@ -92,6 +92,8 @@ User Interface
 
 - With LessTif, typing in the debugger console works better.
 
+- With LessTif, switching the register set works.
+
 - Drag and Drop of breakpoints in the machine code is supported.
 
 - Spin boxes (used to step values) have been slightly improved.
